assets/css/components/nav/_default.scss
/* ==========================================================================
   #NAV/DEFAULT
   ========================================================================== */

.nav {
    @include list-reset;
    display: flex;
    gap: var(--spacing3);
    height: 100%;

    @media (min-width: $bp-tablet) {
        gap: var(--spacing5);
    }

    li {
        align-items: center;
        display: flex;
        flex: 1;
        margin: 0;
        padding: var(--spacing1) 0;
        position: relative;
    }

    a {
        align-items: center;
        display: flex;
        gap: var(--spacing1);
        justify-content: center;
        width: 100%;

        background: transparent;
        color: var(--colorTextSubtle);
        text-decoration-color: var(--colorTextSubtle);
        text-decoration-thickness: 1px;

        svg {
            path {
                stroke: var(--colorTextSubtle);
            }
        }

        &:hover {
            color: var(--colorText);
            text-decoration: none;
            
            svg {
                path {
                    stroke: var(--colorText);
                }
            }
        }

        &.nav-current {
            color: var(--colorText);
            text-decoration: none;

            svg {
                path {
                    stroke: var(--colorText);
                }
            }
        }
    }
}

